compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__type_holes3.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1382
expression: "\n@external(erlang, \"a\", \"b\")\nfn main(x: List(_)) -> Nil\n"
---
error: Unexpected type hole
  ┌─ /src/one/two.gleam:3:17
  │
3 │ fn main(x: List(_)) -> Nil
  │                 ^ I need to know what this is

We need to know the exact type here so type holes cannot be used.

